--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -68,17 +68,18 @@
 
 /* BTN CONTROLS */
 .btn-a {
-  height: 2.125rem;
+  height: 2.25rem;
   width: var(--width-vw);
   display: flex;
-    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
   background-color: var(--line);
   border: .125rem solid var(--text);
-  border-radius: .5rem;
+  border-radius: .75rem;
   box-shadow: var(--box-shadow-green);
   color: var(--text);
   font-family: var(--font-fancy);
-  font-size: 1.25rem;
+  font-size: 1.125rem;
   margin: 0.25rem;
   outline: none;
   padding: .125rem;
@@ -97,7 +98,7 @@
 
 #btn-pvsc, #btn-pvsp {
   height: 3rem;
-  font-size: 1.25rem;
+  font-size: 1.125rem;
 }
 
 .btn-b {
@@ -109,7 +110,7 @@
   box-shadow: var(--box-shadow-green);
   color: var(--text);
   font-family: var(--font-fancy);
-  font-size: 1.125rem;
+  font-size: 1rem;
   margin: 0.3rem;
   outline: none;
   padding: 0.25rem;
@@ -124,12 +125,6 @@
   background-color: var(--text);
   color: var(--enemy);
   transform: scale(var(--scale-small));
-}
-
-#btn-pvsc, #btn-pvsp, #btn-quit-game, #btn-start-game, #btn-hide-screen, #btn-unlock-screen  {
-  display: flex;
-    align-items: center;
-    justify-content: center;
 }
 
 #btn-unlock-screen {
@@ -168,7 +163,6 @@ html, body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-  /* color: var(--text); */
   padding: 1rem;
 }
 
@@ -181,10 +175,8 @@ html, body {
 }
 
 #title-text-top, #title-text-bot {
-  /* color: var(--loser);   */
-    color: red;  
+  color: var(--loser);  
   font-size: 2.25rem;
-  text-align: center;
   text-transform: uppercase;
 }
 
@@ -228,7 +220,7 @@ html, body {
     justify-content: center;
   background-color: var(--line);
   border: .125rem dashed var(--loser);
-  border-radius: 1rem;
+  border-radius: .75rem;
   box-shadow: var(--box-shadow-green);
   color: var(--loser);
   font-family: var(--font-fancy);
@@ -238,7 +230,8 @@ html, body {
 #message-bar {
   display: flex;
   font-size: 1rem;
-  padding: .45rem;
+  padding: .25rem .25rem .25rem .5rem;
+  text-align: left;
 }
 
 /* MAIN BTN CONTAINER */
@@ -490,33 +483,6 @@ html, body {
   height: var(--height-svg-ship);
 }
 
-/* IMPORTANT: NEED TO ADJUST SVG SHIPS SLIGHT WHEN THINGS GET LARGER, DO IT HERE TO AVOID MESSING WITH orientShipSvgOnShipGrid function */
-
-/* Increments of 1 */
-/* #ship-a1, #ship-a2 {
-  transform: translateX(3rem);
-} */
-
-/* Increments of 0.75 */
-/* #ship-b1, #ship-b2 {
-  transform: translateX(2.25rem);
-} */
-
-/* Increments of 0.5 */
-/* #ship-d1, #ship-d2 {
-  transform: translateX(1.5rem);
-} */
-
-/* Increments of 0.5 */
-/* #ship-s1, #ship-s2 {
-  transform: translateX(1.5rem);
-} */
-
-/* Increments of 0.25 */
-/* #ship-c1, #ship-c2 {
-  transform: translateX(0.75rem);
-} */
-
 /* SPECIAL HOVER EFFECTS (for deployment and target zones) */
 .mouse-deploy:hover {
   background-color: var(--line);
@@ -557,368 +523,25 @@ html, body {
 /* ROOT/SHARED/GLOBAL */
 :root {
   --width-vw: 25rem;
-  /* --height-width-grid: 20rem; */
-  /* --width-margin-offset: -20rem; */
-  /* --height-width-grid-cell: 2rem; */
-  /* --height-svg-ship: 2rem; */
-  /* --linear-gradient-deg: 5deg; */
-  /* --scale-big: 1.05; */
-  /* --scale-small: 0.95; */
+  }
 }
 
-/* BTN CONTROLS */
-.btn-a {
-  height: 2.25rem;
-  width: var(--width-vw);
-  /* display: flex; */
-    /* flex-wrap: wrap; */
-  /* border: .125rem solid var(--text); */
-  /* border-radius: .5rem; */
-  font-size: 1.5rem;
-  margin: 0.5rem;
-  /* padding: .125rem; */
+@media only screen and (width >= 600px) {
+html, body {
+  font-size: 16px; /* Normalize base font size for mobile */
+  line-height: 1.25; /* Improve text readability for mobile */
 }
-
-#btn-pvsc, #btn-pvsp {
-  height: 3.5rem;
-  font-size: 1.5rem;
-}
-
-.btn-b {
-  /* height: 2rem; */
-  /* width: 6rem; */
-  /* border-radius: 1rem; */
-  /* font-size: 1.125rem; */
-  /* margin: 0.375rem; */
-  /* padding: 0.25rem; */
-}
-
-/* html, body {
-  height: 100%;
-  width: 100%;
-  font-size: 14px; 
-  line-height: 1.25; 
-  -webkit-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%;
-} */
-
-/* #app-container {
-  height: 100vh;
-  width: 100vw;
-  display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: start;
-} */
-
-/* HEADER */
-/* #header {
-  display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  color: var(--text);
-  padding: 1rem;
-} */
-
-/* --> TITLE */
-/* #title-container {
-  display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-} */
 
 #title-text-top, #title-text-bot {
-  font-size: 2.75rem;
+  color: var(--loser);  
+  font-size: 2.5rem;
+  text-align: center;
+  text-transform: uppercase;
 }
 
 #MMM {
-  font-size: 1rem;
-}
-
-/* --> GIF */
-#gif-container {
-  display: flex;
-    align-items: center;
-    justify-content: center;
-  border-radius: 1rem;
-  margin: -.25rem;
-  padding: 1rem;
-}
-
-.gif {
-  height: 22rem;
-  width: 22rem;
-  /* border: .5rem solid var(--text);
-  border-radius: 50%;
-  box-shadow: var(--box-shadow-green);
-  filter: grayscale(60%) sepia(60%);
-  object-fit: cover;
-  object-position: 50%;
-  padding: .125rem; */
-}
-
-/* MESSAGES */
-/* #messages {
-  height: fit-content;
-  width: var(--width-vw);
-  display: flex;
-    align-items: center;
-    justify-content: center;
-  border: .125rem dashed var(--loser);
-  border-radius: 1rem;
-  margin: .25rem 0 .25rem 0;
-} */
-
-#message-bar {
-  display: flex;
-  font-size: 1.125rem;
-  padding: .5rem;
-}
-
-/* MAIN BTN CONTAINER */
-#main-btn-container {
-  height: auto;
-  width: var(--width-vw);
-  /* border-radius: 1rem;
-  display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center; */
-}
-
-/* ALL THE VARIOUS BOARDS/ZONES/GRIDS */
-/* #board-container {
-  height: fit-content;
-  width: fit-content;
-  display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-} */
-
-/* --> FULL-BOARDS */
-#p1-full-board,
-#p2-full-board {
-  /* height: fit-content; */
-  width: var(--width-vw);
-  /* display: none;
-    flex-direction: column;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center; */
-  /* border-radius: .5rem; */
-  /* margin-top: 0.25rem; */
-  padding: 0 0.25rem 0 0.25rem;
-  overflow: visible;
- }
-
-/* ----> PLAYER NUMBER TEXT */
-/* ALTER BELOW  THEN COME BACK HERE... */
-#p1-player-num-text,
-#p2-player-num-text {
-  width: calc(var(--height-width-grid) + var(--player-num-width-add-on));
-  display: flex;
-    align-items: center;
-    justify-content: center;
-  /* border: .375rem solid var(--text); */
-  border-radius: .5rem;
-  font-size: 1.25rem;
-  margin: .5rem;
-  padding: .125rem;
-}
-
-/* ----> PLACE SHIPS, DEPLOYMENT ZONE & TARGET ZONE */
-/* #p1-place-ships,
-#p2-place-ships {
-  height: fit-content;
-  width: fit-content;
-  display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-  font-size: 1rem;
-  margin-bottom: 1rem;
+  font-size: .9rem;
   text-align: center;
-} */
-
-.radar-screen {
-  height: 15rem;
-  width: 15rem;
-}
-
-#p1-x5-grid,
-#p2-x5-grid {
-  height: 10.5rem;
-  width: 10.5rem;
-  /* display: flex;
-    flex-direction: column;
-    flex-wrap: no-wrap;
-    align-items: center;
-    justify-content: center;
-  gap: 0.25rem;
-  border-radius: 100%;
-  margin: .125rem; */
-}
-
-.all-p1-place-ships,
-.all-p2-place-ships {
-  /* Key Item: SVG ship height */
-  height: 1.75rem;
-}
-
-/* .all-p1-place-ships:hover,
-.all-p2-place-ships:hover {
-  transform: scale(1.25);
-}
-
-.all-p1-place-ships:active,
-.all-p2-place-ships:active {
-  transform: scale(1.1);
-} */
-
-/* #p1-place-ship-btn-container, #p2-place-ship-btn-container {
-  height: auto;
-  width: fit-content;
-  display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
-  margin: 0;
-} */
-
-/* #p1-deployment-zone,
-#p1-target-zone,
-#p2-deployment-zone,
-#p2-target-zone {
-  height: fit-content;
-  width: fit-content;
-    flex-direction: column;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-  border-radius: .5rem;
-  font-size: 1rem;
-  line-height: 1.5;
-  overflow: visible;
-} */
-
-/* #p1-deployment-zone,
-#p2-deployment-zone {
-  display: flex;
-  border: .25rem solid var(--line);
-  margin-bottom: .5rem;
-} */
-
-/* #p1-target-zone,
-#p2-target-zone {
-  display: none;
-  border: .25rem solid var(--enemy);
-  margin-top: .5rem;
-} */
-
-#p1-ship-board,
-#p2-ship-board,
-#p1-hit-miss-board,
-#p2-hit-miss-board,
-#p1-target-ship-board,
-#p2-target-ship-board,
-#p1-target-hit-miss-board,
-#p2-target-hit-miss-board {
-  height: var(--height-width-grid);
-  width: var(--height-width-grid);
-  /* display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-  overflow: visible; */
-}
-
-/* #p1-ship-board,
-#p2-ship-board {
-  background-color: var(--sea);
-}
-
-#p1-target-ship-board,
-#p2-target-ship-board {
-  background-color: var(--sea);
-} */
-
-#p1-hit-miss-board,
-#p2-hit-miss-board,
-#p1-target-hit-miss-board,
-#p2-target-hit-miss-board {
-  height: var(--height-width-grid);
-  width: var(--height-width-grid);
-  /* font-family: var(--font-emoji); */
-  /* Key Item: Below negative margin-top is the key to getting the proper grid overlap */
-  margin-top: var(--width-margin-offset);
-}
-
-.ship-cells1,
-.ship-cells2,
-.ship-target-cells1,
-.ship-target-cells2,
-.hit-miss-cells1,
-.hit-miss-cells2,
-.hit-miss-target-cells1,
-.hit-miss-target-cells2 {
-  /* Key Item: Grid cell size */
-  height: var(--height-width-grid-cell);
-  width: var(--height-width-grid-cell);
-  display: flex;
-    align-items: center;
-    justify-content: center;
-  font-family: var(--font-emoji);
-  /* Key Item: Grid cell font-size */
-  font-size: 70%;
-}
-
-.ship-cells1,
-.ship-cells2 {
-  border: 0.0785rem dashed var(--line);
-}
-
-.ship-target-cells1,
-.ship-target-cells2 {
-  border: 0.0785rem dashed var(--enemy);
-}
-
-.ship {
-  height: var(--height-svg-ship);
-}
-
-/* SPECIAL HOVER EFFECTS (for deployment and target zones) */
-.mouse-deploy:hover {
-  background-color: var(--line);
-  border: 0.125rem dashed var(--loser);
-  opacity: 0.65;
-  transform: scale(1.15);
-  transform: scale(var(--scale-big));
-}
-
-.mouse-deploy:active {
-  border-radius: 50%;
-  transform: scale(1);
-}
-
-.mouse-target:hover {
-  background-color: var(--enemy);
-  border: 0.5rem solid var(--loser);
-  border-radius: 50%;
-  opacity: 0.6;
-  transform: scale(1.75);
-}
-
-.mouse-target:active {
-  border-radius: 50%;
-  transform: scale(1);
 }
 
 }
-
-
-
-@media only screen and (width >= 1300px) {}
