--- a/src/styles/styles copy 2.css
+++ b/src/styles/styles copy 2.css
@@ -17,7 +17,7 @@
 /* SPECIAL HOVER EFFECTS (for deployment and target zones) */
 /* MEDIA QUERIES */
 
-/* NOTE: USE <CTRL-F Key Item>, to find CSS that maintains the grids */
+/* USE <CTRL-F Key Item>, to find CSS that maintains the grids */
 
 /* ***** TABLE OF CONTENTS *********************************** */
 
@@ -48,7 +48,7 @@
   --height-width-gif: 20rem;
   --height-width-place-ship-grid: 10.5rem;
   --height-width-radar-screen: 15rem;
-  --player-num-width-add-on: 0.5rem;
+  --player-num-width-add-on: .5rem;
   --height-width-grid: 18rem;
   --width-margin-offset: -18rem;
   --height-width-grid-cell: 1.8rem;
@@ -72,18 +72,18 @@
   height: 2.25rem;
   width: var(--width-master);
   display: flex;
-  align-items: center;
-  justify-content: center;
+    align-items: center;
+    justify-content: center;
   background-color: var(--line);
-  border: 0.125rem solid var(--text);
-  border-radius: 0.75rem;
+  border: .125rem solid var(--text);
+  border-radius: .75rem;
   box-shadow: var(--box-shadow-green);
   color: var(--text);
   font-family: var(--font-fancy);
   font-size: 1.25rem;
   margin: 0.25rem 0 0.25rem 0;
   outline: none;
-  padding: 0.125rem;
+  padding: .125rem;
 }
 
 .btn-a:hover {
@@ -97,8 +97,7 @@
   transform: scale(var(--scale-small));
 }
 
-#btn-pvsc,
-#btn-pvsp {
+#btn-pvsc, #btn-pvsp {
   height: 3rem;
   font-size: 1.35rem;
 }
@@ -140,16 +139,12 @@
   padding: 0;
 }
 
-html,
-body {
+html, body {
   height: 100%;
   width: 100%;
-  /* Below, reduces base font size for mobile, a convenient way to backdoor size changes easily, reduce for mobile views */
-  font-size: 14px;
-  /* Improves text readability for mobile */
-  line-height: 1.25;
-  /* Prevents mobile browsers from resizing text */
-  -webkit-text-size-adjust: 100%;
+  font-size: 14px; /* Normalize base font size for mobile */
+  line-height: 1.25; /* Improve text readability for mobile */
+  -webkit-text-size-adjust: 100%; /* Prevent mobile browsers from resizing text */
   -ms-text-size-adjust: 100%;
 }
 
@@ -157,36 +152,31 @@ body {
   height: 100vh;
   width: 100vw;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: start;
-  background: linear-gradient(
-    var(--linear-gradient-deg),
-    var(--bkgd),
-    var(--bkgd2)
-  );
+    flex-direction: column;
+    align-items: center;
+    justify-content: start;
+  background: linear-gradient(var(--linear-gradient-deg), var(--bkgd), var(--bkgd2));
 }
 
 /* HEADER */
 #header {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
   padding: 1rem;
 }
 
 /* --> TITLE */
 #title-container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
-#title-text-top,
-#title-text-bot {
-  color: var(--loser);
+#title-text-top, #title-text-bot {
+  color: var(--loser);  
   font-size: 2.25rem;
   text-transform: uppercase;
 }
@@ -203,23 +193,23 @@ body {
 /* --> GIF */
 #gif-container {
   display: flex;
-  align-items: center;
-  justify-content: center;
+    align-items: center;
+    justify-content: center;
   border-radius: 1rem;
-  margin: -0.25rem;
+  margin: -.25rem;
   padding: 1rem;
 }
 
 .gif {
   height: var(--height-width-gif);
   width: var(--height-width-gif);
-  border: 0.5rem solid var(--text);
+  border: .5rem solid var(--text);
   border-radius: 50%;
   box-shadow: var(--box-shadow-green);
   filter: grayscale(60%) sepia(60%);
   object-fit: cover;
   object-position: 50%;
-  padding: 0.125rem;
+  padding: .125rem;
 }
 
 /* MESSAGES */
@@ -227,21 +217,21 @@ body {
   height: fit-content;
   width: var(--width-master);
   display: flex;
-  align-items: center;
-  justify-content: center;
+    align-items: center;
+    justify-content: center;
   background-color: var(--line);
-  border: 0.125rem dashed var(--loser);
-  border-radius: 0.75rem;
+  border: .125rem dashed var(--loser);
+  border-radius: .75rem;
   box-shadow: var(--box-shadow-green);
   color: var(--loser);
   font-family: var(--font-fancy);
-  margin: 0.25rem 0 0.25rem 0;
+  margin: .25rem 0 .25rem 0;
 }
 
 #message-bar {
   display: flex;
   font-size: 1rem;
-  padding: 0.25rem 0.25rem 0.25rem 0.5rem;
+  padding: .25rem .25rem .25rem .5rem;
   text-align: left;
 }
 
@@ -251,10 +241,10 @@ body {
   width: var(--width-master);
   border-radius: 1rem;
   display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  gap: 0.25rem;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: .25rem;
   font-family: var(--font-fancy);
 }
 
@@ -263,9 +253,9 @@ body {
   height: fit-content;
   width: fit-content;
   display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
 }
 
 /* --> FULL-BOARDS */
@@ -274,47 +264,42 @@ body {
   height: fit-content;
   width: var(--width-master);
   display: none;
-  flex-direction: column;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
   border-radius: 1.75rem;
   font-family: var(--font-fancy);
   margin-top: 0.25rem;
   padding: 0 0.25rem 0 0.25rem;
   overflow: visible;
   text-transform: uppercase;
-}
+ }
 
 #p1-full-board {
-  background: linear-gradient(
-    var(--linear-gradient-deg),
-    var(--bkgd-trans),
-    var(--player1)
-  );
+  background: linear-gradient(var(--linear-gradient-deg), var(--bkgd-trans), var(--player1));
   color: var(--player1-text);
 }
 
 #p2-full-board {
-  background: linear-gradient(
-    var(--linear-gradient-deg),
-    var(--bkgd-trans),
-    var(--player2)
-  );
+  background: linear-gradient(var(--linear-gradient-deg), var(--bkgd-trans), var(--player2));
   color: var(--player2-text);
 }
 
 /* ----> PLAYER NUMBER TEXT */
+
 #p1-player-num-text,
 #p2-player-num-text {
+  /* width: calc(var(--height-width-grid) + var(--player-num-width-add-on)); */
   display: flex;
-  align-items: center;
-  justify-content: center;
+    align-items: center;
+    justify-content: center;
   background-color: var(--bkgd-trans);
-  border-radius: 0.5rem;
+  /* border: .25rem solid var(--bkgd-trans); */
+  border-radius: .5rem;
   font-size: 1.25rem;
-  margin: 0.5rem;
-  padding: 0.125rem;
+  margin: .5rem;
+  padding: .125rem;
   text-align: center;
 }
 
@@ -324,9 +309,9 @@ body {
   height: fit-content;
   width: fit-content;
   display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
   font-family: var(--font-fancy);
   font-size: 1rem;
   margin-bottom: 1rem;
@@ -344,15 +329,15 @@ body {
   height: var(--height-width-place-ship-grid);
   width: var(--height-width-place-ship-grid);
   display: flex;
-  flex-direction: column;
-  flex-wrap: no-wrap;
-  align-items: center;
-  justify-content: center;
+    flex-direction: column;
+    flex-wrap: no-wrap;
+    align-items: center;
+    justify-content: center;
   gap: 0.25rem;
-  background-color: var(--sea);
   background-image: url("/src/assets/radarScreen.svg");
+  background-color: var(--sea);
   border-radius: 100%;
-  margin: 0.125rem;
+  margin: .125rem;
 }
 
 .all-p1-place-ships,
@@ -371,14 +356,13 @@ body {
   transform: scale(1.1);
 }
 
-#p1-place-ship-btn-container,
-#p2-place-ship-btn-container {
+#p1-place-ship-btn-container, #p2-place-ship-btn-container {
   height: auto;
   width: fit-content;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-evenly;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
   margin: 0;
 }
 
@@ -395,11 +379,11 @@ body {
 #p2-target-zone {
   height: fit-content;
   width: fit-content;
-  flex-direction: column;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-  border-radius: 0.5rem;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+  border-radius: .5rem;
   font-family: var(--font-fancy);
   font-size: 1rem;
   line-height: 1.5;
@@ -410,16 +394,16 @@ body {
 #p1-deployment-zone,
 #p2-deployment-zone {
   display: flex;
-  border: 0.25rem solid var(--line);
-  margin-bottom: 0.5rem;
+  border: .25rem solid var(--line);
+  margin-bottom: .5rem;
 }
 
 #p1-target-zone,
 #p2-target-zone {
   display: none;
-  border: 0.25rem solid var(--enemy);
+  border: .25rem solid var(--enemy);
   color: var(--enemy);
-  margin-top: 0.5rem;
+  margin-top: .5rem;
 }
 
 #p1-ship-board,
@@ -433,10 +417,10 @@ body {
   height: var(--height-width-grid);
   width: var(--height-width-grid);
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
   overflow: visible;
 }
 
@@ -473,8 +457,8 @@ body {
   height: var(--height-width-grid-cell);
   width: var(--height-width-grid-cell);
   display: flex;
-  align-items: center;
-  justify-content: center;
+    align-items: center;
+    justify-content: center;
   font-family: var(--font-emoji);
   /* Key Item: Grid cell font-size */
   font-size: 70%;
@@ -496,8 +480,8 @@ body {
   z-index: 10;
 }
 
-.ship {
   /* Key Item: individual ship svg sizes */
+.ship {
   height: var(--height-svg-ship);
 }
 
@@ -529,75 +513,84 @@ body {
 }
 
 /* MEDIA QUERIES */
-@media only screen and (width >= 400px) {
+
+/* @media only screen and (width >= 400px) {
   :root {
-    --width-master: 25rem;
-    --gif-variable: 3rem;
-    --height-width-gif: calc(var(--width-master) - var(--gif-variable));
+  --width-master: 25rem;
+  }
+} */
+
+@media only screen and (width >= 400px) {
+
+/* ROOT/SHARED/GLOBAL */
+:root {
+  --width-master: 25rem;
+  --gif-variable: 3rem;
+  --height-width-gif: calc(var(--width-master) - var(--gif-variable));
   }
 }
 
 @media only screen and (width >= 600px) {
-  :root {
-    --width-master: 26rem;
+
+:root {
+  --width-master: 26rem;
+  /* --height-width-gif: 23rem; */
   }
 
-  html,
-  body {
-    font-size: 16px;
-    line-height: 1.25;
-  }
+html, body {
+  font-size: 16px; /* Normalize base font size for mobile */
+  line-height: 1.25; /* Improve text readability for mobile */
+}
 
-  #title-text-top,
-  #title-text-bot {
-    font-size: 2.65rem;
-  }
+#title-text-top, #title-text-bot {
+  font-size: 2.65rem;
+}
 
-  #MMM {
-    font-size: 0.95rem;
-  }
+#MMM {
+  font-size: .95rem;
+}
 
-  .btn-a {
-    height: 2.5rem;
-    font-size: 1.25rem;
-    gap: 0.25rem;
-    margin: 0.5rem 0 0.5rem 0;
-    padding: 0.125rem;
-  }
+.btn-a {
+  height: 2.5rem;
+  font-size: 1.25rem;
+  gap: .25rem;
+  margin: 0.5rem 0 .5rem 0;
+  padding: .125rem;
+}
 
-  #btn-pvsc,
-  #btn-pvsp {
-    height: 3.25rem;
-    font-size: 1.35rem;
-    margin: 0.25rem;
-  }
+#btn-pvsc, #btn-pvsp {
+  height: 3.25rem;
+  font-size: 1.35rem;
+  margin: 0.25rem;
+}
 
-  #messages {
-    margin-top: 1rem;
-  }
+#messages {
+  margin-top: 1rem;
+}
 
-  #main-btn-container {
-    gap: 0.5rem;
-  }
+#main-btn-container {
+  gap: .5rem;
+}
+
 }
 
 @media only screen and (width >= 800px) {
-  :root {
-    --width-master: 27rem;
+:root {
+  --width-master: 27rem;
+  /* --height-width-gif: 24rem; */
   }
 
-  html,
-  body {
-    font-size: 18px;
-    line-height: 1.25;
-  }
+html, body {
+  font-size: 18px; /* Normalize base font size for mobile */
+  line-height: 1.25; /* Improve text readability for mobile */
+}
 
-  #title-text-top,
-  #title-text-bot {
-    font-size: 2.75rem;
-  }
+#title-text-top, #title-text-bot {
+  font-size: 2.75rem;
+}
 
-  #MMM {
-    font-size: 0.975rem;
-  }
+#MMM {
+  font-size: .975rem;
+}
+
 }
