last commit of day, back to full working code; todo-get this to work on apple mobile

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -438,6 +438,7 @@ body {
   align-items: center;
   justify-content: center;
   overflow: visible;
+  visibility: visible !important;
 }
 
 #p1-ship-board,
