--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -186,7 +186,8 @@ body {
 
 #title-text-top,
 #title-text-bot {
-  color: var(--loser);
+  /* color: var(--loser); */
+    color: darkorange;
   font-size: 2.25rem;
   text-transform: uppercase;
 }
@@ -438,7 +439,6 @@ body {
   align-items: center;
   justify-content: center;
   overflow: visible;
-  visibility: visible !important;
 }
 
 #p1-ship-board,
@@ -494,12 +494,24 @@ body {
 
 .hit-miss-cells1,
 .hit-miss-cells2 {
-  z-index: 10;
+  /* z-index: 10; */
+    
+}
+
+.hit-miss-cells1,
+.hit-miss-cells2,
+.hit-miss-target-cells1,
+.hit-miss-target-cells2 {
+  /* TESTING - APPLE BROWSERS ARE NOT SHOW EMOJIS CONSISTENTLY, BELOW IS AN ATTEMPT TO REMEDY */
+  visibility: visible !important;
+  -webkit-transform:translate3d(0,0,0);
+  z-index: 1;
 }
 
 .ship {
   /* Key Item: individual ship svg sizes */
   height: var(--height-svg-ship);
+  opacity: .95;
 }
 
 /* SPECIAL HOVER EFFECTS (for deployment and target zones) */
