--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -208,11 +208,7 @@ body {
 
 #title-text-top,
 #title-text-bot {
-  /* color: var(--loser); */
-  /* color: DarkSlateGray; */
-    /* color: IndianRed; */
-        /* color: crimson; */
-                color: navy;
+  color: var(--loser);
   font-size: 2.25rem;
   text-transform: uppercase;
 }
